--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -5,18 +5,14 @@ on: workflow_dispatch
 jobs:
   build:
     name: Build ${{ matrix.arch }}-${{ matrix.sdk }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        arch:
-          - aarch64_generic    
-          - i386_pentium4
-          - x86_64
-#        sdk:
-#          - openwrt-24.10
         release:
           - master
+        arch:
+          - aarch64_generic
 
     steps:
       - uses: actions/checkout@main
@@ -47,7 +43,7 @@ jobs:
       - name: Building packages
         uses: openwrt/gh-action-sdk@main
         env:
-          ARCH: ${{ matrix.arch }}-${{ matrix.sdk }}
+          ARCH: ${{ matrix.arch }}-${{ matrix.release }}
           FEEDNAME: packages_ci
           PACKAGES: luci-app-daed
           NO_REFRESH_CHECK: true
