--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -41,7 +41,7 @@ jobs:
           echo "version=$latest_commit-wing_$latest_wing_commit-core_$latest_core_commit" >> "$GITHUB_ENV"
 
       - name: Building packages
-        uses: davidtall/openwrt-gh-action-sdk@go1.23
+        uses: davidtall/gh-action-sdk@go1.24
         env:
           ARCH: ${{ matrix.arch }}-${{ matrix.sdk }}
           FEEDNAME: packages_ci
