--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -19,8 +19,9 @@ jobs:
         with:
           fetch-depth: 0
 
-
-
+      - name: Get node-empty
+        run: |
+          git clone https://github.com/sbwml/node-empty
 
 
       - name: Building packages
